# Devops

./: Jenkinsfile
Automations/: updatebackendnew.sh  updatefrontendnew.sh
GitOps/: Jenkinsfile
MLops/: .gitignore   Dockerfile  README.md  pyproject.toml  sentiment_model.joblib  setup.py
MLops/k8s/: sentiment-deployment.yaml  sentiment-service.yaml
MLops/requirements/: base.txt  dev.txt  prod.txt  prod.txt 
MLops/scripts/: deploy.sh  train_model.py
MLops/sentiment_analysis_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
MLops/src/: __init__.py  flask_api.py  sentiment_model.py
MLops/tests/: test_api.py      test_model.py
kubernetes/: backend.yaml  frontend.yaml
