[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-analysis-api"
version = "1.0.0"
description = "Sentiment Analysis Machine Learning API"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"

dependencies = [
    "scikit-learn>=1.2.2",
    "numpy>=1.24.3",
    "flask>=2.3.2",
    "joblib>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "flake8",
    "black",
    "mypy"
]

prod = [
    "gunicorn",
    "prometheus-client"
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_generics = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]